Cambio de Toastr por Notyf.

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,10 @@ a {
     margin: auto;
 }
 
+.notyf {
+    z-index: 999999;
+}
+
 /* ****************************** */
 /* Header */
 /* ****************************** */
